--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "task-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "mongodb.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "mongodb": "^5.7.0"
   }
