--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^5.7.0",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "validator": "^13.11.0"
   }
 }
