--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "task-app",
   "version": "1.0.0",
   "description": "",
-  "main": "mongodb.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.5.3",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
