--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^5.9.2",
     "mongoose": "^7.6.9",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
